fixed spacing between products and landing page

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -307,9 +307,6 @@ nav .searchBarButton{
 
 .locationButton {
   text-overflow: ellipsis;
-  overflow-x:hidden;
-  padding:5px;
-  overflow-y:visible;
 }
 
 @media screen and (max-width: 970px) {
