--- a/react-app/src/components/ProductAll/ProductAll.css
+++ b/react-app/src/components/ProductAll/ProductAll.css
@@ -72,7 +72,7 @@ main {
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .products-list>div {
